# ChangeLog for media-video/mplayer
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/mplayer/ChangeLog,v 1.917 2014/07/21 15:44:05 ssuominen Exp $

  21 Jul 2014; Samuli Suominen <ssuominen@gentoo.org>
  mplayer-1.2_pre20130729.ebuild, mplayer-9999.ebuild:
  Fix building by moving replacing of LINGUAS="zh" to LINGUAS="zh_CN" from
  src_compile() to src_configure() wrt #482968 by "Hamlet"
  However, should port strip-linguas() from eutils.eclass to mplayer's ebuild
  because LINGUAS="zh zh_CN" works but LINGUAS="zh_CN zh" ends up as
  LINGUAS="zh_CN_CN zh" which isn't fatal but will prevent installation
  of documentation.

  21 Jul 2014; Rick Farina <zerochaos@gentoo.org>
  mplayer-1.2_pre20130729.ebuild, mplayer-9999.ebuild:
  adding := to libmng with permissions from ssuominen

  17 May 2014; Sven Vermeulen <swift@gentoo.org> mplayer-1.1.1-r1.ebuild,
  mplayer-1.2_pre20130729.ebuild, mplayer-9999.ebuild:
  Fix bug #509740 - Add USE=selinux dependency to sec-policy/selinux-mplayer

  06 Feb 2014; Michael Palimaka <kensington@gentoo.org> mplayer-1.1.1-r1.ebuild,
  mplayer-1.2_pre20130729.ebuild, mplayer-9999.ebuild:
  Pin virtual/jpeg to SLOT 0.

  25 Sep 2013; Justin Lecher <jlec@gentoo.org> mplayer-1.2_pre20130729.ebuild,
  mplayer-9999.ebuild, metadata.xml:
  Fix typo

  11 Aug 2013; Alexis Ballier <aballier@gentoo.org>
  mplayer-1.2_pre20130729.ebuild, mplayer-9999.ebuild:
  depend on ffmpeg:0

*mplayer-1.2_pre20130729 (29 Jul 2013)

  29 Jul 2013; Alexis Ballier <aballier@gentoo.org>
  +mplayer-1.2_pre20130729.ebuild, +files/mplayer-1.2_pre20130729-compat.patch:
  Bump a snapshot. Should fix bug #478154 and bug #476502.

  29 Jul 2013; Alexis Ballier <aballier@gentoo.org> mplayer-9999.ebuild:
  allow snapshots named _pre

  29 Jul 2013; Alexis Ballier <aballier@gentoo.org> mplayer-9999.ebuild:
  Add a warning for libav users.
