@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX dump_ffmpeg.sh 2519 SHA256 85b5fa90936c3b09bca8732b3190189a0b52f81bf390bf615f8642d965d05fac SHA512 6748dec1e12611a55ea8f3025ba60b038d53341d5eb8cba09b5858ad37ff690725ec865a26b58a14c936cffb67c15f2c9bc1b8b85350b5936ef27cb622ec1d19 WHIRLPOOL 67dcc1e093071734a726f7a011376a2f32cbe226620db54e6112ca0edddb6e89f77a34a552b1b38155c16af323bc1e382233a271b7ecae4c176d8ecff86e52e1
 AUX mplayer-1.0_rc4-pkg-config.patch 2751 SHA256 9c0e5654ef05d64ae8bb91e3204433559a1f576b663217c6119bd61cec2ae51c SHA512 cda6680ce0f02ae211686630e6e036e6432006b8936b0e37a5ceda74d73012d65b9262350aee936057d733e513016071ef41cda283023570c98d822dab866de9 WHIRLPOOL dae658443451ef61906ded5d5d2ba220756f6007a88823bfa52b2ede63cbdf521065cb38b9085f504cabc3a8cdbdb1f4f3d6f647085ac0d8a818885a2301c0db
@@ -19,19 +19,25 @@ DIST font-arial-iso-8859-1.tar.bz2 234242 SHA256 9730f481764f367c9089d0166fb6ccf
 DIST font-arial-iso-8859-2.tar.bz2 222208 SHA256 71debfc960007c2f6242dfc91e8b1c005b30a99e129aeb00ab8c03f4371b41c1 SHA512 5671e628303fd816f64a51ad10e2f4dd9c3dc1b34c379a2ecf489b83931db7af668aaa4e00e96a00cacd63ed98daeae6b6a4d5925edfb06fc98d3a923f70257d WHIRLPOOL 08178087b4ea1dfb2250f4673785e31dd876b06af51c51b2bddc172b23e6e33cbc1b2c6b710a317e42dc05486974b26ed0ad3ca50a185567aa77d49bd1e72aee
 DIST mplayer-1.2_pre20130729.tar.xz 5358436 SHA256 9928cd6d0d765eb38f2824c501b94e5b6e0a2ec6e39a0c788654c5508c9eb9ab SHA512 e76ae7a1aeca9e853edf5403f3e3ae60dace980076a12160c501e18d019184af08256829f8e657b9fdbf549126bf518cf5dbe2860eda906e6fcd3ccc44a5f5a5 WHIRLPOOL b4007e4a00fd8b0b2d75a6d375f3b334b3251ea8dd677a5c1d562e4997fbbee81981bbbde9a88a61dc83bfc2d3e5dac6f93e7ff882088ba8b0c3df7c2cd9a6bd
 EBUILD mplayer-1.1.1-r1.ebuild 18338 SHA256 334e0a92e89cf04cb13d73770b5686bdaca4602b25754090d154249698992dd6 SHA512 6c11078e63b27330d0f9fc01334802f06f26ade99a5bbf8043f4c91a6de7118fda93edb10b57df1bd48f85b0da8f03d1effb033490963dceb9d0e9867c5ead38 WHIRLPOOL a74657aa23de4d12c6182e6b3d7fc025b96973cfc815107fdd53a1f2f53084c98677fb55ee6e8f993af4f6a89290142bf835f2d38e2d4a3a8b80b859a08ad109
-EBUILD mplayer-1.2_pre20130729.ebuild 17395 SHA256 224d822b2db87d0c24ad97e1ab79ff1880d9b81f41c3949c7ed9928526d81a67 SHA512 fa10e52cc4ee2953f440c95dcc56c8992ecc8621985feb7b2fa3d67195e06217da2a282ac18f6b23d521d8dbb6961af079c3ae49f54af2678715f5a50e29a0e6 WHIRLPOOL 4460b68fa5babd8659ac8fe96670e2119a7f5b83232386aa6ca410778b6496952446db1e59f54d6b6569522694e51f1fad2bc694532f43a8dc76fac41ca00bed
-EBUILD mplayer-9999.ebuild 17318 SHA256 baae6c557dd120c0a88c45dd6cd7e6daa5fc4ade4bf6ae5e264fd2b8bdd6c6c7 SHA512 44b91cba3b7a2711bdef6d8161a818864859bbf2656c4c031859ab8c537c9edc9d4b712fe834ee8b201f1cd013380dae1bb37037ad0d74fa48d3a281ec1ae1a5 WHIRLPOOL 688e164b0510ad941c77b1db75a7d42ccc52b696a44a1ccf1404726fb5b3b7721ab43665b845594519835a1baafe040dbbec0733a287bf1c5a109f818366b75a
-MISC ChangeLog 51981 SHA256 ca49b66d215c95026053e54df61db9954c2f79038ea341ef4c722a31f69e7669 SHA512 1a4bd645336e7281dbb310c5c96853fa644ff7a4bb16e6fb7da5b0b48c7706a3a7dc3a61b71fc508591734833a4df77232165f32eb6f9226efa3d14d8f99bf07 WHIRLPOOL bcd1ad582e0d07d4fe1ee7c5b790318c7f928c7872ef41990e99c3643b13b40265387232c6c4f2b59c6637742cf6b50d6425fa871b78525cf5f78f1d77be2bec
+EBUILD mplayer-1.2_pre20130729.ebuild 17397 SHA256 bbe0468211c117b9160c4d7ce3f033e30e5df19644356177d065e88564ca5082 SHA512 40a0becea3fdf71b90e3566573c87e90583e473e32bc5d21c13818b262842c2847dc03a0b2e5528a33d5281b3d18a573be262b997e81ee4b9068275b22bd65a3 WHIRLPOOL d4a74702963a9dd471a523c6cb6df99b31ee7a6cc33449e87934b5c2885259c7732eae8ffde2efdea84024d7d9a142340610b499c27e4df92e4c1b588a6c7147
+EBUILD mplayer-9999.ebuild 17320 SHA256 269a2be687c7f89bb2499c93bfc2d1f851489d167db3febd6042ee2bd7c587d4 SHA512 ea50ab8bbe0c31d09b75b2056d10899fd761ccedacb85badd3d2a21013ab7d402cef0dac9edd0af8b5042c5e5f1b66c15a2e08853842eaf51aa9f105608929a8 WHIRLPOOL e4307135ef8943f6e19f90c02135c2b8f73e7e5bed93ff29231f0e314fc0a0b34262208775e6cd7b47641dc772b7e479a2475ff5e58308ebb5b5fe6db8f8734e
+MISC ChangeLog 52113 SHA256 d1dbb456fd41b7d300be6c646a63106c723e6d9797a09985ccef78cb78632383 SHA512 cd232c49d4dbcebb0350ed87cc205b4e11d52d42ee18b7da58f042207f21fc1638d142a722c1ed5b3518c73fbf40f8e4184f5aa5d09bae03c52b469f5955db2e WHIRLPOOL fb42822ac1dad01d67ec7064117bf66a17116fce6cf39e1f0feed25e5babb5bb4298bbb86748f2c119341e57671ddb217baa54aebb3807668c793cf19c9178fd
 MISC ChangeLog-2008 107064 SHA256 d9949e0e21fd6fd00f1417201455ee399240ef1010dcf56611ac0fc1f6f9505b SHA512 622543b379b4c44f5845566b4e697bd92dd3e864e2f01a1b0f303c8ae5c7fb5de24839f6503765d51b4a3bfa777d175a7e410383e62ef2bbacf3e87cdc28c705 WHIRLPOOL e731af47505ffa646c92386dfb14acaffc2bb14ab4da74520c0b4dbc15ca5c20aacadbb53c4b91ba8d126a75bf7d2fb61877eeda354064e20c48cf4137bf6a74
 MISC metadata.xml 2882 SHA256 58a6c42a63be40a3f361b898ac6905b609afad6396fabea0e6387f59e5d3d1fc SHA512 a6826ed3528e053e00f1af527630ba270e902fafb5964126c3806903a9d7e3e9658d5feb0d00a26038f69d9182193acb14d6a74272637523a78a601b738f2ed3 WHIRLPOOL 4c6d302c41e88aeec59d7add811e53cdd737284d437258771be5de85bc83bf58c49bc9238a5dfc7a1a7553dc34fef4e6c4b5bdb235940f983809a4984f5c43d8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJTzTQkAAoJEEdUh39IaPFNCWsH/RPUH7gzh1uUzP0hehWDua5+
-i5osEF1/lSRMKMCdp7vF4Fh3x1Ydz6ODVZBlYeH96m26XI7HvlJG0N6qcZAMt8r0
-dy6+hXrZALusFsCXq7FlogjX+UzsDDpaHgH9cxi/GT3UwIIk72bx1gg0jb7VerOd
-swhNXHmlpXU19wBPNHcKzD1AfXfq8EkzfEZHBVd/a6cLgdeCiLit34AvhWcENglh
-hxSnJnAJF/ha3+ueo7Zkv2NNSD/aFStOUaa8Je0wGO76VcWGkRFrRVdOtv7p1ndQ
-lrXFKFpMynLNceIXcZjeALmZJVu2jMxUBukCWhX+h+EHgqmIyzT65N01Fmt17+o=
-=5vIf
+iQIcBAEBCgAGBQJT0ByoAAoJEKXdFCfdEflK+8oP/0EfFVBJkE7m3cvVSbeubTZG
+/ymO4Iut3XNwkTJ3MvFag6VTMqFa4804ekGF6JI7DdFmQpKRHmFDeEedYTSZ9l7o
+gH+L99MA+P9XdxBA6RGX4leXFVG+KAcKpYNf64GQGuIs8hCKXZ13sN7GXvNxFYjo
+R+JEqqoeYZ64pNfgte6S20xwz4wlo6c+YKuUBYjeyFYz2hgHQURkuLFzWjTSGsiw
+/+rRuGUkhPqoI1tHixHnKHAXS5THThHNK/YL47g23BWZqJo5izAEBjrusEnZMVvA
+Td/TTNEeH//rI+dVyuzS5o/V//5VwbK0Rd4wcoUDJchnM2f7QQ37enF+g8fbyCYO
+zDiMt/4Wu8byvA+f3aZKaqCdnf8xHgc6bFwRdeCrEw2n8Ev4Bn6qErn9W5BJ/NAX
+oMVdaS+ZqsllszvCrLP3+MeY+gWRfo7JE/VCgiBDWiYYOQhvRt695mw7IanlbOdo
+Cs6Zyy3GxwkxsT26T68iZYRt8VuGBActKdJT4oJjLIiQ2wiAEuFjZYtF2wjFXgkG
+kAFYv8ojrwNJUr9MzSuQ3OmDp+LwSaeRKGicxIuDfU7tEsYfkC9y6USt3yrZFRyq
+XtE5kab5eZsWzAmJQ9YLrsxPNCnZHBp0XLYnvJbSTEXtGMZGuNZAhJqoSmK0Nr7y
+zxqFwJgGT1BCdRcXVI/r
+=YgnA
 -----END PGP SIGNATURE-----
