@@ -1,6 +1,10 @@
 # ChangeLog for media-video/mplayer
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/mplayer/ChangeLog,v 1.917 2014/07/21 15:44:05 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/mplayer/ChangeLog,v 1.918 2014/07/23 20:31:45 zerochaos Exp $
+
+  23 Jul 2014; Rick Farina <zerochaos@gentoo.org>
+  mplayer-1.2_pre20130729.ebuild, mplayer-9999.ebuild:
+  adding := to libass dep
 
   21 Jul 2014; Samuli Suominen <ssuominen@gentoo.org>
   mplayer-1.2_pre20130729.ebuild, mplayer-9999.ebuild:
